// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components - common - Calendar => Test calendar with prop daysHighlight 1`] = `
<div>
  <section
    class="calendar-common"
  >
    <div
      class="labeled-calendar"
    >
      <h2
        class="com-text --title --arial --font-bold --4xs"
      >
        Abril
      </h2>
      <div
        class="days-of-week"
      >
        <h2
          class="com-text --arial --font-bold --4xs"
        >
          L
        </h2>
        <h2
          class="com-text --arial --font-bold --4xs"
        >
          M
        </h2>
        <h2
          class="com-text --arial --font-bold --4xs"
        >
          M
        </h2>
        <h2
          class="com-text --arial --font-bold --4xs"
        >
          J
        </h2>
        <h2
          class="com-text --arial --font-bold --4xs"
        >
          V
        </h2>
        <h2
          class="com-text --arial --font-bold --4xs"
        >
          S
        </h2>
        <h2
          class="com-text --arial --font-bold --4xs"
        >
          D
        </h2>
      </div>
    </div>
    <div
      class="date-calendar"
    >
      <span
        class="com-text  --arial --4xs"
      >
         
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        1
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        2
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        3
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        4
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        5
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        6
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        7
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        8
      </span>
      <span
        class="com-text bg-green --arial --4xs"
      >
        9
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        10
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        11
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        12
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        13
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        14
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        15
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        16
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        17
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        18
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        19
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        20
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        21
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        22
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        23
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        24
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        25
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        26
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        27
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        28
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        29
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        30
      </span>
    </div>
  </section>
</div>
`;

exports[`Components - common - Calendar => Test calendar with prop month 1`] = `
<div>
  <section
    class="calendar-common"
  >
    <div
      class="labeled-calendar"
    >
      <h2
        class="com-text --title --arial --font-bold --4xs"
      >
        Abril
      </h2>
      <div
        class="days-of-week"
      >
        <h2
          class="com-text --arial --font-bold --4xs"
        >
          L
        </h2>
        <h2
          class="com-text --arial --font-bold --4xs"
        >
          M
        </h2>
        <h2
          class="com-text --arial --font-bold --4xs"
        >
          M
        </h2>
        <h2
          class="com-text --arial --font-bold --4xs"
        >
          J
        </h2>
        <h2
          class="com-text --arial --font-bold --4xs"
        >
          V
        </h2>
        <h2
          class="com-text --arial --font-bold --4xs"
        >
          S
        </h2>
        <h2
          class="com-text --arial --font-bold --4xs"
        >
          D
        </h2>
      </div>
    </div>
    <div
      class="date-calendar"
    >
      <span
        class="com-text  --arial --4xs"
      >
         
      </span>
      <span
        class="com-text  --arial --4xs"
      >
         
      </span>
      <span
        class="com-text  --arial --4xs"
      >
         
      </span>
      <span
        class="com-text  --arial --4xs"
      >
         
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        1
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        2
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        3
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        4
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        5
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        6
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        7
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        8
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        9
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        10
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        11
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        12
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        13
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        14
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        15
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        16
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        17
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        18
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        19
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        20
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        21
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        22
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        23
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        24
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        25
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        26
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        27
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        28
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        29
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        30
      </span>
    </div>
  </section>
</div>
`;

exports[`Components - common - Calendar => testing components without props 1`] = `
<div>
  <section
    class="calendar-common"
  >
    <div
      class="labeled-calendar"
    >
      <h2
        class="com-text --title --arial --font-bold --4xs"
      >
        Octubre
      </h2>
      <div
        class="days-of-week"
      >
        <h2
          class="com-text --arial --font-bold --4xs"
        >
          L
        </h2>
        <h2
          class="com-text --arial --font-bold --4xs"
        >
          M
        </h2>
        <h2
          class="com-text --arial --font-bold --4xs"
        >
          M
        </h2>
        <h2
          class="com-text --arial --font-bold --4xs"
        >
          J
        </h2>
        <h2
          class="com-text --arial --font-bold --4xs"
        >
          V
        </h2>
        <h2
          class="com-text --arial --font-bold --4xs"
        >
          S
        </h2>
        <h2
          class="com-text --arial --font-bold --4xs"
        >
          D
        </h2>
      </div>
    </div>
    <div
      class="date-calendar"
    >
      <span
        class="com-text  --arial --4xs"
      >
         
      </span>
      <span
        class="com-text  --arial --4xs"
      >
         
      </span>
      <span
        class="com-text  --arial --4xs"
      >
         
      </span>
      <span
        class="com-text  --arial --4xs"
      >
         
      </span>
      <span
        class="com-text  --arial --4xs"
      >
         
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        1
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        2
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        3
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        4
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        5
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        6
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        7
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        8
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        9
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        10
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        11
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        12
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        13
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        14
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        15
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        16
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        17
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        18
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        19
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        20
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        21
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        22
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        23
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        24
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        25
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        26
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        27
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        28
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        29
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        30
      </span>
      <span
        class="com-text  --arial --4xs"
      >
        31
      </span>
    </div>
  </section>
</div>
`;
